--- a/Desktop/realestateihara/estateihara/.github/workflows/deploy.yml
+++ b/Desktop/realestateihara/estateihara/.github/workflows/deploy.yml
@@ -5,25 +5,20 @@ on:
     branches:
       - main
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v3
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
-      - name: Upload public folder
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: ./public
+          path: public
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
