--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,10 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           path: estateihara
-          # ↑ index.html が入ってるフォルダを指定！
+          # ↑ index.html が入っているフォルダを指定！
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
+
+
 
