--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,25 +5,33 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
-
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Upload site
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
           path: estateihara
 
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v2
+
 
 
 
